Fixed all warnings in src, tried to eliminate all new Integer/Float/Double calls.
git-svn-id: svn+ssh://multivac.martellotech.com/svn/MarWatch/personal/rtenney/rhino-canvas@6445 15cfa1a4-d5a4-44d2-8e29-f8dcda5bb17e